# HB-RF-ETH-ng

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  SECURITY.md  action_log.txt  archive.json  beta.json  build_webui.py  generate_release_notes.py  generate_webui_release_notes.py  latest.json  platformio.ini  rename_webui_files.py  sdkconfig.defaults  sdkconfig.hb-rf-eth-ng  test_ota_function.py  update_changelog.py  update_headers.py  update_version.py  update_webui_version.py  verify_webui.py  version.txt  webui-archive.json
.github/: labeler.yml
.github/workflows/: apply-gzip-24h-hotfix.yml  apply-pr387-refactor.yml  apply-recovery-hotfix.yml  apply-translation-audit.yml  build.yml  dispatch-beta4.yml  docs.yml  maintenance-apply-webui-review-fixes.yml  maintenance-complete-draft-validation.yml  maintenance-dispatch-draft-releases.yml  maintenance-fix-diagnostics-review.yml  newdesign.yml  pages.yml  pr-check.yml  rebuild-archive.yml  release-webui.yml  release.yml  run-brotli-fallback-revision.yml  run-recovery-hotfix.yml  security.yml  stale.yml
activation-server/: README.md  TODO.md  server.py
docs/: ALT_BUILD_WORKFLOWS.md  ALT_WEBUI_DESIGN_REFERENCE.md  API.md  HOTFIX_BETA3_RECOVERY.md  OTA_TEST_PROTOCOL.md  RELEASE_VERSIONING.md  SYSTEM_OVERVIEW_THEME_LOGS.md  TROUBLESHOOTING.md  WEBUI_UPDATES.md  WIKI.md  index.html  openapi.yaml
include/: dcf.h  ethernet.h  gps.h  hmframe.h  led.h  linereader.h  log_manager.h  log_stream.h  mdnsserver.h  monitoring.h  monitoring_api.h  mqtt_handler.h  ntpclient.h  ntpserver.h  ota_config.h  ping_service.h  pins.h  pushbuttonhandler.h  radiomoduleconnector.h  radiomoduledetector.h  radiomoduledetector_utils.h  rate_limiter.h  rawuartudplistener.h  reset_info.h  rtcdriver.h  secure_utils.h  security_headers.h  semver.h  settings.h  streamparser.h  supporter_crl.h  supporter_key.h  sysinfo.h  syslog.h  system_overview_api.h  system_reset.h  systemclock.h  theme_api.h  udphelper.h  updatecheck.h  (+4 more)
main/: CMakeLists.txt  dcf.cpp  ethernet.cpp  events.cpp  gps.cpp  hmframe.cpp  idf_component.yml  led.cpp  linereader.cpp  log_manager.cpp  log_stream.cpp  main.cpp  mdnsserver.cpp  monitoring.cpp  monitoring_api.cpp  mqtt_handler.cpp  ntpclient.cpp  ntpserver.cpp  ota_config.cpp  ping_service.cpp  pushbuttonhandler.cpp  radiomoduleconnector.cpp  radiomoduledetector.cpp  rate_limiter.cpp  rawuartudplistener.cpp  reset_info.cpp  rtcdriver.cpp  settings.cpp  streamparser.cpp  supporter_crl.cpp  supporter_key.cpp  sysinfo.cpp  syslog.cpp  system_overview_api.cpp  system_reset.cpp  systemclock.cpp  theme_api.cpp  updatecheck.cpp  validation.cpp  webui.cpp  (+2 more)
release/: RELEASE_NOTES.md  SHA256SUMS.txt  firmware-version.txt  webui-compatibility.json  webui-version.txt
scripts/: check-translations.mjs  update_archive.py
src/: CMakeLists.txt  dcf.cpp  ethernet.cpp  gps.cpp  hmframe.cpp  led.cpp  linereader.cpp  main.cpp  mdnsserver.cpp  monitoring.cpp  monitoring_api.cpp  mqtt_handler.cpp  ntpclient.cpp  ntpserver.cpp  pushbuttonhandler.cpp  radiomoduleconnector.cpp  radiomoduledetector.cpp  rawuartudplistener.cpp  reset_info.cpp  rtcdriver.cpp  settings.cpp  streamparser.cpp  sysinfo.cpp  systemclock.cpp  updatecheck.cpp  validation.cpp  webui.cpp
test/test_monitoring_validation/: test_monitoring_validation.cpp
test/test_ota_config/: test_ota_config.cpp
test/test_static_ipv4_and_password/: test_static_ipv4_and_password.cpp
test/test_webui_compatibility/: test_webui_compatibility.cpp
tools/: strip_archive_notes.py
webui/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
webui/public/: manifest.webmanifest
webui/spiffs_image/: main.css.br  main.js.br  webui-manifest.json
webui/src/: about.vue  app.vue  change-password.vue  firmwareupdate.vue  header.vue  login.vue  main.js  monitoring.vue  settings.vue  stores.js  sysinfo.vue  systemlog.vue  systemoverview.vue  theme.vue  updates.vue  webuiupdate.vue
webui/src/components/: AppIcon.vue  AppToastContainer.vue  BootstrapLite.js  BrandLogo.vue  ChangelogModal.vue  NewDesignHeader.vue  PasswordChangeModal.vue  SponsorModal.vue
webui/src/composables/: supporterKey.js  useBodyScrollLock.js  useClipboard.js  useDismissable.js  useHeaderNavigation.js  useSafeStorage.js
webui/src/locales/: cs.js  de.js  en.js  es.js  fr.js  index.js  it.js  nl.js  no.js  pl.js  sv.js
webui/src/styles/: bootstrap.scss  main.css
webui/tests/: generate_assets.spec.js  regressions.spec.js
